2026/2026-06-12/force-app/main/default/objects/Activity/fields/Account_Review__c.field-meta.xml
<CustomField>
    <fullName>Account_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Review</label>
    <referenceTo>Account_Review__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>