2026/2026-06-12/force-app/main/default/objects/Activity/fields/Title_Field__c.field-meta.xml
<CustomField>
    <fullName>Title_Field__c</fullName>
    <formula>IF(
   NOT(ISBLANK( Account_Review__c )),
   Account_Review__r.Name  &amp; &quot; (&quot; &amp;  Account_Review__r.Account__r.Name &amp; &quot;)&quot;,
   IF(NOT(ISBLANK( Case__c )),  Case__r.CaseNumber &amp; &quot; (&quot; &amp;  Case__r.Account.Name &amp; &quot;)&quot;, &quot;Other&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title Field</label>
    <type>Text</type>
</CustomField>